# ai-venture-architect

./: .gitignore  ARCH.md  LAUNCH_CHECKLIST.md  Makefile  PLAN.md  PRODUCT_BRIEF.md  README.md  TODO.md  env.example  package.json
.github/workflows/: ci.yml
apps/api/: pyproject.toml
apps/api/src/api/: __init__.py  main.py
apps/api/src/api/core/: auth.py  config.py  database.py  exceptions.py  rbac.py
apps/api/src/api/middleware/: monitoring.py
apps/api/src/api/models/: __init__.py  idea.py  report.py  signal.py  user.py  workspace.py
apps/api/src/api/routes/: auth.py  exports.py  health.py  ideas.py  search.py  signals.py
apps/api/src/api/services/: business_modeling.py  export_service.py  monitoring_service.py  safety_service.py  search.py  security_service.py
apps/api/tests/: conftest.py  test_business_modeling.py  test_search_service.py
apps/web/: next.config.js  package.json  tailwind.config.js
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/components/ideas/: IdeaCanvas.tsx
apps/web/src/components/search/: HybridSearch.tsx
apps/workers/: pyproject.toml
apps/workers/src/workers/: __init__.py  main.py
apps/workers/src/workers/agents/: __init__.py  competitor_worker.py  ideation_worker.py  ingest_worker.py  langgraph_orchestrator.py  normalize_worker.py  trend_worker.py
apps/workers/src/workers/connectors/: __init__.py  base.py  github.py  product_hunt.py  rss.py
apps/workers/src/workers/core/: __init__.py  config.py  worker.py
deploy/kubernetes/production/: api-deployment.yaml  namespace.yaml
deploy/scripts/: deploy.sh
monitoring/: prometheus.yml
terraform/: main.tf  outputs.tf  variables.tf
